--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,11 @@
             "styles": [
               "src/styles.css",
               "src/assets/libs/owl.carousel/dist/assets/owl.carousel.min.css",
-              "src/assets/css/style.min.css"
+              "src/assets/css/style.min.css",
+              "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
+              "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/slick-carousel/slick/slick.min.js"
             ],
             "scripts": [
               "src/assets/libs/jquery/dist/jquery.min.js",
@@ -40,7 +44,11 @@
              "src/assets/js/custom.js",
              "src/assets/libs/owl.carousel/dist/owl.carousel.min.js",
              "src/assets/libs/apexcharts/dist/apexcharts.min.js",
-             "src/assets/js/dashboard.js"
+             "src/assets/js/dashboard.js",
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/owl.carousel/dist/owl.carousel.min.js",
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/slick-carousel/slick/slick.min.js"
             ]
           },
           "configurations": {
