--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@marcreichel/angular-carousel": "^3.0.1",
     "jquery": "^3.7.1",
+    "ngx-drag-scroll": "^16.0.0",
+    "ngx-owl-carousel": "^2.0.7",
+    "ngx-slick-carousel": "^15.0.0",
+    "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
