--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,9 @@
               "src/assets/libs/owl.carousel/dist/assets/owl.carousel.min.css",
               "src/assets/css/style.min.css",
               "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
-              "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css",
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/slick-carousel/slick/slick.min.js"
+              "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css"
+             // "node_modules/jquery/dist/jquery.min.js",
+            //  "node_modules/slick-carousel/slick/slick.min.js"
             ],
             "scripts": [
               "src/assets/libs/jquery/dist/jquery.min.js",
@@ -48,7 +48,8 @@
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/owl.carousel/dist/owl.carousel.min.js",
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/slick-carousel/slick/slick.min.js"
+              "node_modules/slick-carousel/slick/slick.min.js",
+              "src/assets/js/xd.js"
             ]
           },
           "configurations": {
@@ -130,7 +131,8 @@
               "src/assets/js/custom.js",
               "src/assets/libs/owl.carousel/dist/owl.carousel.min.js",
               "src/assets/libs/apexcharts/dist/apexcharts.min.js",
-              "src/assets/js/dashboard.js"
+              "src/assets/js/dashboard.js",
+              "src/assets/js/xd.js"
             ]
           }
         }
