--- a/package.json
+++ b/package.json
@@ -18,15 +18,35 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fullcalendar/angular": "^6.1.9",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
+    "@fullcalendar/list": "^6.1.9",
+    "@fullcalendar/timegrid": "^6.1.9",
     "@marcreichel/angular-carousel": "^3.0.1",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
+    "@syncfusion/ej2-angular-richtexteditor": "^23.1.41",
+    "@types/jspdf": "^2.0.0",
+    "angularjs-sweetalert2": "^1.0.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.0",
+    "ng2-search-filter": "^0.5.1",
     "ngx-drag-scroll": "^16.0.0",
     "ngx-owl-carousel": "^2.0.7",
+    "ngx-owl-carousel-o": "^16.0.0",
+    "ngx-pagination": "^6.0.3",
     "ngx-slick-carousel": "^15.0.0",
+    "ngx-toastr": "^17.0.2",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -35,12 +55,15 @@
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.24",
+    "@types/node": "^20.8.7",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "typescript": "~5.1.3"
   }
 }
