--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "src/assets/libs/owl.carousel/dist/assets/owl.carousel.min.css",
               "src/assets/css/style.min.css"
@@ -101,6 +102,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "src/assets/libs/owl.carousel/dist/assets/owl.carousel.min.css",
               "src/assets/css/style.min.css"
